<resources>
    <string name="app_name">FitFinder</string>
    <string name="nav_search">Search</string>
    <string name="nav_session">Session</string>
    <string name="nav_message">Message</string>
    <string name="nav_profile">Profile</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="message_box_hint">Type a message</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="payment_details">Payment Details</string>
    <string name="contact">Contact</string>
    <string name="sign_out">Sign out</string>
    <string name="session_available">Available</string>
    <string name="session_upcoming">Upcoming</string>
    <string name="session_past">Past</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="close_button">Close</string>
    <string name="duration">Duration</string>
    <string name="search_filter">Search Filter</string>
    <string name="to_be_done">To be done</string>
    <string name="online">Online</string>
    <string name="in_person">In Person</string>
    <string name="hypen">-</string>

    // Format string
    <string name="session_datetime">%s</string>
    <string name="session_duration">%d min</string>
    <string name="session_suburb">%s, %s, %s</string>

    // Content Description
    <string name="location_icon_desc">Location icon</string>
    <string name="duration_icon_desc">Duration icon</string>
    <string name="datetime_icon_desc">DateTime icon</string>
    <string name="cost_icon_desc">Cost icon</string>
    <string name="add_session">Add Session</string>
    <string name="take_photo_desc">Take new photo</string>
    <string name="my_location_desc">My Location</string>
    <string name="date_range_for_filter">Date Range for filter</string>

    // Form hint
    <string name="title_form">Title</string>
    <string name="description_form">Description</string>
    <string name="date_form">Date</string>
    <string name="time_form">Time</string>
    <string name="suburb_form">Suburb</string>
    <string name="cost_form">Cost</string>
    <string name="online_session">This session can be done online</string>
    <string name="in_person_session">This session can be done in person</string>
    <string name="edit_button">Edit</string>
    <string name="book_button">Book</string>
    <string name="availability_icon">Availability Icon</string>
    <string name="new_value">New Value</string>
    <string name="max_price">Max Price</string>
    <string name="date_range">Date Range</string>
    <string name="start">Start</string>
    <string name="end">End</string>

    // Error Message
    <string name="connection_error">Network problem, please try again.</string>
</resources>