<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="profileViewModel"
            type="com.sample.fitfinder.ui.profile.viewmodel.ProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.profile.ProfileFragment">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/profile_image_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_default_profile_24" />

            <TextView
                android:id="@+id/displayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@{profileViewModel.currentUser.displayName}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintBottom_toTopOf="@id/emailAddress"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                tools:text="David Ng" />

            <TextView
                android:id="@+id/emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{profileViewModel.currentUser.email}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/displayName"
                tools:text="david.ng@gmail.com" />

            <View
                android:id="@+id/profilePictureDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/tocButton"
                style="@style/Widget.FitFinder.ListButtonStyle"
                android:text="@string/terms_of_service"
                app:icon="@drawable/ic_button_document_24"
                app:iconPadding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePictureDivider" />

            <Button
                android:id="@+id/paymentDetailsButton"
                android:text="@string/payment_details"
                app:icon="@drawable/ic_button_creditcard_24"
                app:iconPadding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tocButton"
                style="@style/Widget.FitFinder.ListButtonStyle" />

            <Button
                android:id="@+id/contactDetailsButton"
                android:text="@string/contact"
                app:icon="@drawable/ic_button_contact_24"
                app:iconPadding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paymentDetailsButton"
                style="@style/Widget.FitFinder.ListButtonStyle" />

            <Button
                android:id="@+id/signOutButton"
                android:text="@string/sign_out"
                app:icon="@drawable/ic_button_signout_24"
                app:iconPadding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactDetailsButton"
                style="@style/Widget.FitFinder.ListButtonStyle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>