<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.sample.fitfinder.ui.profile.EditAction"/>
        <import type="android.text.InputType"/>

        <variable
            name="viewModel"
            type="com.sample.fitfinder.ui.profile.viewmodel.ProfileEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@{viewModel.title}"
            android:paddingVertical="10dp"
            android:paddingHorizontal="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Update title"/>

        <EditText
            android:id="@+id/edit_field"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@={viewModel.inputValue}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:selectAllOnFocus="true"
            android:hint="@string/new_value"
            android:inputType="@{viewModel.action == EditAction.DisplayName ? InputType.TYPE_CLASS_TEXT + InputType.TYPE_TEXT_FLAG_CAP_WORDS : InputType.TYPE_CLASS_TEXT + InputType.TYPE_TEXT_VARIATION_EMAIL_ADDRESS }"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/confirm_button"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>