<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/searchFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.sample.fitfinder.ui.search.SearchFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_sessionDetailFragment"
            app:destination="@id/sessionDetailFragment" />
        <action
            android:id="@+id/action_searchFragment_to_searchFilterDialog"
            app:destination="@id/searchFilterDialog" />
    </fragment>

    <fragment
        android:id="@+id/sessionFragment"
        android:name="com.sample.fitfinder.ui.session.SessionFragment"
        android:label="@string/nav_session"
        tools:layout="@layout/fragment_session" >
        <action
            android:id="@+id/action_sessionFragment_to_sessionAddFragment"
            app:destination="@id/sessionAddFragment" />
        <action
            android:id="@+id/action_sessionFragment_to_sessionDetailFragment"
            app:destination="@id/sessionDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/messageFragment"
        android:name="com.sample.fitfinder.ui.message.MessageFragment"
        android:label="@string/nav_message"
        tools:layout="@layout/fragment_message" >
        <action
            android:id="@+id/action_messageFragment_to_messageRoomFragment"
            app:destination="@id/messageRoomFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.sample.fitfinder.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_profileEditDialogFragment"
            app:destination="@id/profileEditDialogFragment" />
    </fragment>

    <fragment
        android:id="@+id/messageRoomFragment"
        android:name="com.sample.fitfinder.ui.message.MessageRoomFragment"
        android:label="MessageRoomFragment"
        tools:layout="@layout/item_my_message">
        <argument
            android:name="message"
            app:argType="com.sample.fitfinder.domain.MessageUserList" />
    </fragment>
    <fragment
        android:id="@+id/sessionAddFragment"
        android:name="com.sample.fitfinder.ui.session.SessionAddFragment"
        android:label="fragment_session_add"
        tools:layout="@layout/fragment_session_add" >
        <argument
            android:name="sessionId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
    <fragment
        android:id="@+id/sessionDetailFragment"
        android:name="com.sample.fitfinder.ui.session.SessionDetailFragment"
        android:label="SessionDetailFragment"
        tools:layout="@layout/fragment_session_detail" >
        <argument
            android:name="sessionId"
            app:argType="long" />
        <action
            android:id="@+id/action_sessionDetailFragment_to_sessionAddFragment"
            app:destination="@id/sessionAddFragment" />
    </fragment>
    <fragment
        android:id="@+id/sessionAvailableFragment"
        android:name="com.sample.fitfinder.ui.session.SessionAvailableFragment"
        android:label="fragment_session_available"
        tools:layout="@layout/fragment_session_available" />
    <dialog
        android:id="@+id/profileEditDialogFragment"
        android:name="com.sample.fitfinder.ui.profile.ProfileEditDialogFragment"
        android:label="ProfileEditDialogFragment" >
        <argument
            android:name="editAction"
            app:argType="com.sample.fitfinder.ui.profile.EditAction" />
    </dialog>
    <dialog
        android:id="@+id/searchFilterDialog"
        android:name="com.sample.fitfinder.ui.search.SearchFilterDialog"
        android:label="SearchFilterDialog" />
</navigation>